# dais-2026-data-readiness-desk

./: .commitlintrc.yaml  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  databricks.yml  justfile  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-pre-commit-checks.yaml
app/: README.md  app.py  app.yaml  package-lock.json  package.json  requirements.txt  tsconfig.json
app/client/: index.html  vite.config.ts
app/server/: index.mjs
config/: scoring.yaml
contracts/: district_boundaries.yaml  facilities.yaml  hmis_2019_20_slice.yaml  nfhs5_district_health_indicators.yaml  pincode_directory.yaml  srs_2020_state.yaml
data/: README.md
docs/: BUILD_RUNBOOK.md  Requirements.md  architecture.md  build_runbook.md  data_dictionary.md  data_quality.md  decision_log.md  demo_script.md  diagrams.md  genie_reference.md  governance.md  implementation_status.md  requirements.md  runbook.md
docs/prd/: PRD.md  TODO.md
notebooks/: 00_preflight.py  01_ingest_bronze.py  02_build_silver.py  03_build_gold.py  04_demo_queries.py
scripts/: bootstrap_databricks_workspace.sh  check_text_files.py  deploy_databricks_app.sh  fetch_district_boundaries.sh  fetch_pincode_directory.sh  generate_srs_2020_state_csv.py  grant_catalog_read_access.sh  grant_databricks_app_access.sh  query_readiness_outputs.sh
src/data_readiness_desk/: __init__.py  hmis.py  normalization.py  readiness.py  scoring.py  spark_helpers.py
src/hackathon_2026/: __init__.py  (+3 more)
tests/: test_hmis.py  test_normalization.py  test_readiness.py  test_scoring.py
(+4 files in other folders)
